[gd_scene load_steps=2 format=3 uid="uid://bj4wyq0f3rmvn"]

[ext_resource type="Script" path="res://player_select.gd" id="1_af26p"]

[node name="Player Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_af26p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 4

[node name="Button" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "🧍
1 Player"

[node name="Button2" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "🧍🧍
2 Player"

[node name="Button3" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "🧍🧍🧍
3 Player"

[node name="Button4" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "🧍🧍
🧍🧍
4 Player"
